--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,16 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4"
+    },
+
+    "autoload": {
+        "psr-4": {
+            "Controllers\\": "controllers/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     }
 }
