--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
 
     "autoload": {
         "psr-4": {
-            "Controllers\\": "controllers/"
+            "Controllers\\": "controllers/",
+            "Libs\\": "libs/"
+            
         }
     },
     "autoload-dev": {
