autoload de Config

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "autoload": {
         "psr-4": {
             "Controllers\\": "controllers/",
-            "Libs\\": "libs/"
+            "Libs\\": "libs/",
+            "Config\\":"config/"
             
         }
     },
