--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "league/plates": "^3.3"
+        "league/plates": "^3.3",
+        "phpoffice/phpspreadsheet": "^1.15",
+        "dompdf/dompdf": "^0.8.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4"
